discussion/kv_engine/180340/180340_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Standardize on to_json

We had 111 uses of to_json, 14 of toJson and 54 toJSON.
Move to to_json (as it maps very well to the to_string())

Change-Id: I7da5898c294fa7c4cf70d668c25abc82eaeffd39

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-09-23 07:37:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-23 07:48:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49636/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49636/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21985/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21985/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20614/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:132:49: error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"? [clang-diagnostic-error]
            json["ports"].push_back(connection->to_jsonson());
                                                ^~~~~~~~~~
                                                to_json
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_socket.h:50:28: note: "to_json" declared here
    virtual nlohmann::json to_json() const = 0;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:367:43: error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"? [clang-diagnostic-error]
        ret.push_back(listen_conn.back()->to_jsonson());
                                          ^~~~~~~~~~
                                          to_json
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_socket.h:50:28: note: "to_json" declared here
    virtual nlohmann::json to_json() const = 0;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:461:35: error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"? [clang-diagnostic-error]
        ret.push_back(connection->to_jsonson());
                                  ^~~~~~~~~~
                                  to_json
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_socket.h:50:28: note: "to_json" declared here
    virtual nlohmann::json to_json() const = 0;
                           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20614/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"? [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20614/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41716/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41716/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10325/ : FAILURE

Compile error at [2022-09-23T07:42:08.103Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10325/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22972/ : FAILURE

Compile error at [2022-09-23T07:41:00.905Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: ?class ServerSocket? has no member named ?to_jsonson?; did you mean ?to_json??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22972/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10426/ : FAILURE

Compile error at [2022-09-23T07:46:39.800Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: ?class ServerSocket? has no member named ?to_jsonson?; did you mean ?to_json??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10426/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22595/ : FAILURE

Compile error at [2022-09-23T07:42:31.134Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: ?class ServerSocket? has no member named ?to_jsonson?; did you mean ?to_json??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22595/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23782/ : FAILURE

Compile error at [2022-09-23T07:41:17.353Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23782/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30999/ : FAILURE

Compile error at [2022-09-23T07:43:30.754Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/network_interface_manager.cc:132:49:
error: no member named "to_jsonson" in "ServerSocket"; did you mean "to_json"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30999/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19839/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-23 07:48:52.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
File Comment: /PATCHSET_LEVEL -> If we are going to standardise on a single approach, I would propose what nlohmann::json expects for custom type serialisation: https://github.com/nlohmann/json#basic-usage

 void to_json(json& j, const person& p) { ...
 
That allows a very simple and clean way to convert to json:

 // create a person
 ns::person p {"Ned Flanders", "744 Evergreen Terrace", 60};

 // conversion: person -> json
 json j = p;

... it also has a symmetric from_json() if we need to deserialise types. 
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-23 11:50:37.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> Ok.

Can you raise an MB (tagged as say "kv-101" to track the migration to to_json non-member function - it's a good introduction ticket for a new starter / placement student.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-09-23 11:35:32.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> Thats beyond the scope of the patch which is to have a single name for the "same" function instead of having to worry about if it is toJSON, toJson or to_json for the object we're currently operation on.

We can always flip over to the above, but that's more invasive and should be done as a separate task.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-23 15:45:08.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> Thanks,
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-09-23 15:44:28.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> https://issues.couchbase.com/browse/MB-53804
----------------------------------------------------------------------------------------------------------------------
